--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-helmet": "^3.1.0",
     "react-komposer": "^1.3.0",
     "react-mounter": "^1.0.0",
-    "react-simple-di": "^1.0.1"
+    "react-simple-di": "^1.0.1",
+    "rebass": "^0.3.3"
   },
   "devDependencies": {
     "@kadira/storybook": "^2.6.1",
