--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
   "license": "ISC",
   "dependencies": {
     "mantra-core": "^1.2.0",
+    "partial-application": "0.0.17",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-helmet": "^3.1.0",
     "react-komposer": "^1.3.0",
     "react-mounter": "^1.0.0",
     "react-simple-di": "^1.0.1",
-    "rebass": "^0.3.3"
+    "rebass": "^0.3.3",
+    "shingon-load-jss": "^2.0.0"
   },
   "devDependencies": {
     "@kadira/storybook": "^2.6.1",
