--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-mounter": "^1.0.0",
     "react-simple-di": "^1.0.1",
     "rebass": "^0.3.3",
-    "shingon-load-jss": "^2.0.0"
+    "shingon-load-jss": "^2.0.0",
+    "victory": "^0.13.7"
   },
   "devDependencies": {
     "@kadira/storybook": "^2.6.1",
