--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "mantra-core": "^1.2.0",
+    "normalize.jss": "^1.0.2",
     "partial-application": "0.0.17",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
