--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "mantra-core": "^1.2.0",
     "normalize.css": "^5.0.0",
+    "normalize.jss": "^1.0.2",
     "partial-application": "0.0.17",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
@@ -25,6 +26,7 @@
     "react-mounter": "^1.0.0",
     "react-simple-di": "^1.0.1",
     "rebass": "^0.3.3",
+    "shingon-load-jss": "^3.0.0",
     "victory": "^0.13.7"
   },
   "devDependencies": {
