--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-helmet": "^3.1.0",
     "react-komposer": "^1.3.0",
     "react-mounter": "^1.0.0",
+    "react-router": "^3.0.0",
     "react-simple-di": "^1.0.1",
     "rebass": "^0.3.3",
     "shingon-load-jss": "^3.0.0",
